feat: création du menu, commande pause et stop